# kconfig

./: .gitignore  CMakeLists.txt
autotests/: CMakeLists.txt  fallbackconfigresourcestest.cpp  kconfigelektratest.cpp  kconfigelektratest.h  kconfignokdehometest.cpp  kconfigskeletontest.cpp  kconfigtest.cpp  ksharedconfigtest.cpp  test_kconf_update.cpp
autotests/kconfig_compiler/: kconfigcompiler_test.cpp  test4main.cpp
docs/: ELEKTRA_BACKEND.md  elektra_differences.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  kauthorized.cpp  kconfig.cpp  kconfig.h  kconfig_p.h  kconfigbackend.cpp  kconfigbackend_p.h  kconfigbase.h  kconfigelektra.cpp  kconfigelektra.h  kconfigelektra_p.h  kconfiggroup.cpp  kconfigini.cpp  kconfigini_p.h  kconfigwatcher.cpp  kcoreconfigskeleton.cpp  kcoreconfigskeleton.h  kdesktopfile.cpp  ksharedconfig.cpp  ksharedconfig.h
src/elektra/: CMakeLists.txt  elektra_plugin.cpp  elektra_plugin.h  fileinputiterator.cpp  fileinputiterator.h  kconfig_elektra_base.h  parser.cpp  parser.h  readme_kconfig.c  serializer.cpp  serializer.h  test.cpp
src/gui/: kstandardshortcut.cpp  kstandardshortcut.h
src/kconfig_bench/: CMakeLists.txt  main.cpp
src/qml/: kconfigpropertymap.cpp
test/: kconfig_bench_testrc
